--- a/src/HRManager.Web/appsettings.json
+++ b/src/HRManager.Web/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=HRManagerDb; Trusted_Connection=True;"
-  },
+    "Default": "Server=10.3.158.4; Database=HRManagerDb; uid=sa;pwd=1234;"
+  }, 
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
